--- a/otras paginas/pregunta_1.html
+++ b/otras paginas/pregunta_1.html
@@ -15,9 +15,9 @@
 
 <center><h1>¿cual de los dos es flash?</h1></center><br>
 <a href="../otras paginas/pregunta_2.html">
-    <img src="/juego para el profe/imagenes/flash.png" alt=""> </a>
+    <img src="/imagenes/flash.png" alt=""> </a>
 
 <b>___________________________________________</b>
 
 <a href="../otras paginas/perdiste_intentalo_de_nuevo.html">
-    <img src="/juego para el profe/imagenes/saitama.png" alt=""></a>
+    <img src="/imagenes/saitama.png" alt=""></a>
